--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
            <input type="checkbox" name="" id="checkbox">
             <div class="toggle">
               <div class="star1">
-                <img src="photo.jpg" alt="photo" width="500" height="600">
+                <img src="resources/photo.jpg" alt="photo" width="500" height="600">
               </div>
               <div class="star2"></div>
             </div>
@@ -23,8 +23,8 @@
      
      
      <br>
-     <audio controls autoplay muted src="sound.mp3" type="audio/mp3">sound</audio>
+     <audio controls autoplay muted src=resources/"sound.mp3" type="audio/mp3">sound</audio>
      <br>
-     <audio controls autoplay src="sound2.mp3" type="audio/mp3">sound2</audio>
+     <audio controls autoplay src="resources/sound2.mp3" type="audio/mp3">sound2</audio>
 </body>
 </html>
