--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
      
      
      <br>
-     <audio controls autoplay muted src=resources/"sound.mp3" type="audio/mp3">sound</audio>
+     <audio controls autoplay muted src="resources/sound.mp3" type="audio/mp3">sound</audio>
      <br>
      <audio controls autoplay src="resources/sound2.mp3" type="audio/mp3">sound2</audio>
 </body>
