--- a/index.html
+++ b/index.html
@@ -125,8 +125,9 @@
       </script>
     </section>
     <section>
-      <h1>Home</h1>
+      <h1><a href="gsap2023/gsap01.html">GSAP2023</a></h1>
       <button id="theme">Toggle</button>
+      
     </section>
     <section>
       <h1>SVG</h1>
