--- a/gsap2023/gsap10.html
+++ b/gsap2023/gsap10.html
@@ -196,7 +196,7 @@
 <body>
     <header id="parallax__title">
         <h1>GSAP Parallax Effect10</h1>
-        <p>GSAP scrollTrigger - 메뉴 축소 효과</p>
+        <p>GSAP scrollTrigger - 메뉴 이동 + 메뉴 축소 효과</p>
         <ul>
             <li><a href="gsap01.html">1</a></li>
             <li><a href="gsap02.html">2</a></li>
@@ -328,6 +328,33 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.1/ScrollToPlugin.min.js"></script>
     <script>
+        let links = gsap.utils.toArray("#parallax__nav ul li a");
+
+        links.forEach(link => {
+            let element = document.querySelector(link.getAttribute("href"));
+            let linkST = ScrollTrigger.create({
+                trigger: element,
+                start: "top top"
+            });
+
+            ScrollTrigger.create({
+                trigger: element,
+                start: "top center",
+                end: "bottom center",
+                onToggle: self => setActive(link)
+            });
+
+            link.addEventListener("click", e => {
+                e.preventDefault();
+                gsap.to(window, {duration: 1, scrollTo: linkST.start, overwrite: "auto"});
+            })
+        });
+
+        function setActive(link){
+            links.forEach(el => el.classList.remove("active"));
+            link.classList.add("active");
+        }
+
         ScrollTrigger.create({
             start: "top -80",
             end: 99999,
